<resources>
    <string name="app_name">Banking-ds-app</string>
    <string name="app_title_value">"FreeCash Bank "</string>
    <string name="login_title_value">"LOGIN"</string>
    <string name="welcome_value">"Welcome to FreeCash Bank"</string>
    <string name="signup_title_value">"SIGNUP"</string>
    <string name="username_label_value">Username:</string>
    <string name="username_hint_value">Enter your Username</string>
    <string name="password_label_value">Password:</string>
    <string name="password_hint_value">Enter your Password</string>
    <string name="login_button_text_value">Login</string>
    <string name="signup_text_value">Don\'t have an account? Register</string>
    <string name="signup_button_value">Signup </string>
    <string name="confirmPassword_value">Confirm Password</string>
    <string name="card_number_value">Card Number:</string>
    <string name="card_number_hint_value">Enter your Card Number</string>
    <string name="confirmPassword_hint_value">Confirm your password</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="homepage_title_value">Welcome</string>
    <string name="balance_label_value">Your Balance Is:</string>
    <string name="deposit_button_value">DEPOSIT CASH</string>
    <string name="withdraw_button_value">WITHDRAW</string>
    <string name="history_button_value">HISTORY OF TRANSACTIONS</string>
    <string name="logout_button_value">LOGOUT</string>
    <string name="transfer_button_value">TRANSFER MONEY</string>
    <string name="deposit_label_value">DEPOSIT</string>
    <string name="deposit_hint_value">Enter the amout to deposit</string>
    <string name="return_button_value">RETURN TO HOMEPAGE</string>
    <string name="withdraw_title_value">WITHDRAW</string>
    <string name="withdraw_value_hint">Enter the amount to be withdrawed</string>
    <string name="receiver_label_value">Username Of  the receiver</string>
    <string name="amount_label_value">desidered amount to be sent</string>
    <string name="amount_label_value1">desidered amount to be sent</string>
</resources>