<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4EFAD"
    tools:context=".WithdrawActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title_value"
            android:textAlignment="center"
            android:textColor="#5AC55E"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/withdraw_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/withdraw_title_value"
            android:textAlignment="center"
            android:textColor="#5AC55E"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/withdraw_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/withdraw_value_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/withdraw_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#78D54C"
            android:text="@string/withdraw_button_value" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#586B58"
            android:text="@string/return_button_value" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>