<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4EFAD"
    tools:context=".TransferActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title_value"
            android:textAlignment="center"
            android:textColor="#5AC55E"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transfer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/transfer_button_value"
            android:textAlignment="center"
            android:textColor="#5AC55E"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/receiver_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_label_value" />

        <EditText
            android:id="@+id/receiver_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFDFD"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount_label_value" />

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#78D54C"
            android:text="@string/transfer_button_value" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#586B58"
            android:layout_marginTop="16dp"
            android:text="@string/return_button_value"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>